--- a/index.html
+++ b/index.html
@@ -8,19 +8,26 @@
 	<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 </head>
 <body>
+<div class="container">
+<div class="row">
+<div class="col s12 m6 offset-m3 center" >
+   <canvas id='pic' style="width:100%"></canvas>
+</div>
+</div>
+</div>
 <div class="row">
 <div class="col s12 center">
-   <canvas id='pic'></canvas>
-</div>
-</div>
-<div class="row">
-<div class="col s12 center">
-   <a class="waves-effect waves-light btn-large deep-purple lighten-3" id='but'><i class="material-icons left">refresh</i>Ещё</a>
-</div>
+   <a class="waves-effect waves-light btn-large deep-purple lighten-1" id='but'><i class="material-icons left">refresh</i>Ещё</a>
+</div>	
 </div>
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="js/materialize.min.js"></script>
-
+<script>
+			$(document).ready(function(){
+				$('.materialboxed').materialbox();
+			})
+		</script>
 		<script defer src="js/1.js" ></script>
+
 </body>	
 </html>
