--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="container">
 <div class="row">
 <div class="col s12 m6 offset-m3 center" >
-   <canvas id='pic' style="width:100%"></canvas>
+   <canvas id='pic' style="width:100%; margin-top: 20px"></canvas>
 </div>
 </div>
 </div>
